dropdown all section

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1278,3 +1278,10 @@ img.imgfooter {
     display: none !important;
   }
 }
+/* select {
+  border: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  -ms-appearance: none; 
+} */
